--- a/demo_complete/demo-todomvc/package.json
+++ b/demo_complete/demo-todomvc/package.json
@@ -4,6 +4,7 @@
   "description": "Vanilla JS Todo Demo based on [TodoMVC](http://todomvc.com)",
   "main": "index.js",
   "scripts": {
+    "start": "./node_modules/.bin/live-server .",
     "test": "./node_modules/.bin/karma start --single-run"
   },
   "keywords": [],
@@ -14,6 +15,7 @@
     "karma": "^4.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^2.0.1",
-    "karma-mocha-reporter": "^2.2.5"
+    "karma-mocha-reporter": "^2.2.5",
+    "live-server": "^1.2.1"
   }
 }
